Store data in Kafka instead of influxdb

--- a/deployment/docker-compose-local.yml
+++ b/deployment/docker-compose-local.yml
@@ -1,30 +1,37 @@
 version: "3.8"
 services:
-  influxdb:
-    container_name: influxdb
-    image: influxdb:latest
-    volumes:
-      - "./influxdb:/var/lib/influxdb2"
-    ports:
-      - "8086:8086"
+  zookeeper:
+    image: confluentinc/cp-zookeeper:latest
     environment:
-      - DOCKER_INFLUXDB_INIT_MODE=setup
-      - DOCKER_INFLUXDB_INIT_ORG=wejago
-      - DOCKER_INFLUXDB_INIT_BUCKET=hichi
-      - DOCKER_INFLUXDB_INIT_USERNAME=${DOCKER_INFLUXDB_INIT_USERNAME}
-      - DOCKER_INFLUXDB_INIT_PASSWORD=${DOCKER_INFLUXDB_INIT_PASSWORD}
-      - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=${INFLUX_TOKEN}
-    env_file:
-      - .env
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - 22181:2181
     networks:
-      -   mqtt2influx-network
+      - mqtt2kafka-network
+    restart: unless-stopped
+
+  kafka:
+    image: confluentinc/cp-kafka:latest
+    depends_on:
+      - zookeeper
+    ports:
+      - 29092:29092
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_CREATE_TOPICS: "mqtt"
+    networks:
+      - mqtt2kafka-network
     restart: unless-stopped
 
   grafana:
     image: grafana/grafana
     container_name: grafana
-    depends_on:
-      - influxdb
     ports:
       - 3000:3000
     volumes:
@@ -40,8 +47,8 @@ services:
     env_file:
       - .env
     networks:
-      - mqtt2influx-network
+      - mqtt2kafka-network
     restart: unless-stopped
 
 networks:
-  mqtt2influx-network:
+  mqtt2kafka-network:
