--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-influxdb.url=${INFLUX_URL}
-influxdb.token=${INFLUX_TOKEN}
-influxdb.org=wejago
-influxdb.bucket=mqtt
+spring.kafka.producer.bootstrap-servers=localhost:29092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
 mqtt.broker.ip=${MQTT_BROKER_IP}
 mqtt.broker.port=${MQTT_BROKER_PORT}
